<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Medic Gateway</string>

	<string name="txtWebappUrl">Webapp URL</string>
	<string name="errWebappUrl_serverNotFound">unable to contact server</string>
	<string name="errWebappUrl_unauthorised">authorisation failed</string>
	<string name="errWebappUrl_appNotFound">URL not responding in expected way</string>
	<string name="errWebappUrl_badJson">unexpected response content</string>
	<string name="errWebappUrl_badSsl">SSL connection failed</string>

	<string name="txtWebappInstanceName">Instance name</string>
	<string name="txtWebappPassword"/>
	<string name="errPassword_illegalChar"/>
	<string name="txtSavingSettings"/>
	<string name="txtValidatingWebappUrl">Validating %s…</string>

	<string name="spnWebappSubdomain"/>
	<string-array name="spnWebappSubdomain" tools:ignore="InconsistentArrays"/>

	<string name="cbxEnablePolling">Enable polling</string>
	<string name="cbxWifiAutoEnable">Automatically enable Wi-Fi</string>
	<string name="cbxEnableCdmaCompatMode">CDMA compatibility mode</string>
	<string name="cbxEnableDummySendMode">Dummy send mode</string>

	<string name="errRequired">required</string>

	<!-- generic settings page errors -->
	<string name="errInvalidUrl">must be a valid URL</string>

	<!-- medic settings page errors -->
	<string name="errInvalidInstanceName">must be a valid instance name</string>

	<string name="btnComposer_send">Send</string>
	<string name="txtComposer_content">Message</string>
	<string name="txtComposer_recipients">To</string>
	<plurals name="txtComposer_sentConfirmation">
		<item quantity="one">Message scheduled for 1 recipient</item>
		<item quantity="other">Message scheduled for %d recipients</item>
	</plurals>
	<string name="errComposer_noRecipients">You must add at least one recipient</string>

	<string name="btnOk">OK</string>
	<string name="btnSave">Save</string>
	<string name="btnCancel">Cancel</string>
	<string name="btnContinue">Continue</string>
	<string name="btnQuit">Quit</string>
	<string name="btnRefresh">Refresh</string>

	<string name="mnuCompose">Compose</string>
	<string name="mnuSettings">Settings</string>
	<string name="mnuMessageStats">Message Statistics</string>

	<string name="lblMessageStats_title">Message Stats</string>
	<string name="lblMessageStats_wo_total">- Webapp originating: %d</string>
	<string name="lblMessageStats_wt_total">- Webapp terminating: %d</string>
	<string name="lblMessageStats_forStatus">--- %1$s: %2$d</string>

	<string name="mnuDeleteOldData">Clear old data</string>
	<string name="txtConfirmDeleteOldData_title">Clear old data</string>
	<string name="txtConfirmDeleteOldData_body">Are you sure you want to delete data more than one week old?
		\n
		\nWarning: pending messages <b>will</b> be deleted.</string>
	<string name="btnConfirmDeleteOldData_confirm">Delete data</string>
	<string name="txtDeleteOldData_inProgress">Deleting old data…</string>
	<plurals name="txtOldDataDeleteCount">
		<item quantity="one">Deleted 1 record.</item>
		<item quantity="other">Deleted %,d records.</item>
	</plurals>

	<string name="txtEmptyListPrompt">(press Refresh to load content)</string>
	<string name="btnRefreshList">Refresh all</string>
	<string name="btnRetrySelected">Retry</string>
	<string name="btnSelectNewer">Select newer</string>

	<string name="txtDefaultMessageAppWarning">
		<![CDATA[
		<b>Warning: <i>%s</i> is not set as the default messaging app on this device.</b>
		]]>
	</string>
	<string name="txtDefaultMessageAppPrompt">
		<![CDATA[
		<br>
		<br>The app may not perform as expected unless it is set as the default messaging app:<br>
		<br>- the SMS inbox may fill up and prevent new messages arriving
		<br><br>
		<br>On the other hand, if you set <i>%s</i> as the default messaging app, you may find:<br>
		<br>- composing SMS through the normal Messages app is no longer possible<br>
		<br>- sending and receiving MMS (picture messages) no longer works
		]]>
	</string>
	<string name="btnHelpMeSetDefaultMessagingApp">Help me change</string>
	<string name="btnIDontCare">I don\'t care</string>

	<string name="txtPermissionsPrompt_sms">
		<![CDATA[
		<b>Warning: <i>%1$s</i> does not currently have permissions to send and receive SMS.</b><br>
		<br>The app may not perform as expected.
		]]>
	</string>

	<string name="txtPermissionsPrompt_fileAccess">
		<![CDATA[
		<b>Warning: <i>%1$s</i> does not currently have permissions to read or write files.</b><br>
		<br>This permission is required so that %1$s can recover unsaved messages after a crash or re-install.
		]]>
	</string>

	<string name="txtDemandPermissions"/>

	<string name="lblTo">To: %s</string>
	<string name="lblFrom">From: %s</string>
	<string name="lblStatusUpdates">Status history:</string>
	<string name="lblContent">Content: %s</string>
	<string name="lblSent">Sent: %s</string>
	<string name="lblReceived">Received by gateway: %s</string>

	<string name="btnRetry">Retry</string>

	<string-array name="message_lists_tabs">
		<item>Event Log</item>
		<item>From Webapp</item>
		<item>To Webapp</item>
	</string-array>

	<string name="txtProcessingExternalLog">Processing external message log…</string>
</resources>
