<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:orientation="vertical">
	<TextView android:id="@+id/txtDefaultMessageAppPrompt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/txtDefaultMessageAppPrompt"/>
	<Button android:id="@+id/btnIDontCare"
			android:text="@string/btnIDontCare"
			android:onClick="dismissActivity"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:layout_alignParentBottom="true"
			android:layout_toLeftOf="@+id/btnHelpMeSetDefaultMessagingApp"/>
	<Button android:id="@+id/btnHelpMeSetDefaultMessagingApp"
			android:text="@string/btnHelpMeSetDefaultMessagingApp"
			android:onClick="openDefaultMessageAppSettings"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="true"/>
</RelativeLayout>
