<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	<fragment android:name="medic.gateway.alert.WoListFragment"
			android:id="@+id/lstWoMessages"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			/>
	<!-- This should probably be a Toolbar, but it wouldn't behave and this was
		much quicker to get working.  TODO convert to toolbar -->
	<LinearLayout
			tools:ignore="ButtonStyle"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
		<Button android:id="@+id/btnRefreshWoMessageList"
				android:text="@string/btnRefreshList"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		<Button android:id="@+id/btnSelectNewer"
				android:text="@string/btnSelectNewer"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		<Button android:id="@+id/btnRetrySelected"
				android:text="@string/btnRetrySelected"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
	</LinearLayout>
</LinearLayout>
